welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: not found: value j
		if(nums(j)!=value){
                        ^