welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	
	
	
		if(nums(j)!=value){
			return 5
		}else{
			return -1
		}
	
	
	

}
